# caarr

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
scripts/: RULES.md  c++_to_c.sh  generate.sh  generate_algorithm.sh
src/: AARR.h  VPARR.c  VPARR.h  algorithm.t.c  algorithm_autogenerated.t.c  vector.t.c  vector.t.h  void_vector.c  void_vector.h  void_vector_config.h
src/priv/: config_check.h  config_check_undef.h  config_global.h
src/template/: algorithm.t.h  vector.t.c  vector.t.h
tests/: AARR-check.c  VPARR-check.c  int_vector-check.c  namespace-check.c  teststruct_vector.c  teststruct_vector.h  teststruct_vector_config.h  void_vector-check.c
